<resources>
    <string name="app_name">Calculatrice</string>
    <string name="button_0">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="calculator_title">Calculator</string>
    <string name="currency_converter_title">Currency</string>
    <string name="length_converter_title">Length</string>
    <string name="temperature_converter_title">Temperature</string>
    <string name="date_converter_title">Date</string>

    <string-array name="currencies_array">
        <item>Dirham - Morocco</item>
        <item>Dollar $ - US</item>
        <item>Euro € - Europe</item>
        <item>Pound £ - UK</item>
        <item>Riyal - Saudi Arabia</item>
    </string-array>

    <string-array name="temperature_units">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>

    <string-array name="length_array">
        <item>Kilometre</item>
        <item>Meter</item>
        <item>Centimeter</item>
        <item>Millimetre</item>
        <item>Micrometres</item>
        <item>Nanometre</item>
        <item>Mile</item>
        <item>Yard</item>
        <item>Foot</item>
        <item>Inch</item>
        <item>Nautical mile</item>
    </string-array>
</resources>